#33 - fixed z-index for status bar

--- a/ui-web/styles/molecules/_status-bar.scss
+++ b/ui-web/styles/molecules/_status-bar.scss
@@ -7,4 +7,5 @@
   padding-right: 20px;
   gap: 8px;
   user-select: none;
+  z-index: 100;
 }
